--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,10 @@
 }
 
 .hero-header {
-    background: url(../img/ChatGPT\ Image\ Jan\ 28\,\ 2026\,\ 01_23_32\ PM.png )   top right no-repeat;
+   /*background: url(../img/ChatGPT\ Image\ Jan\ 28\,\ 2026\,\ 01_23_32\ PM.png )   top right no-repeat;*/
     background-size: cover;
-    filter: blur(5px);
+    background:url("/img/COVER.jpg");
+    position: relative;;
 }
 
 .service-item {
@@ -256,4 +257,10 @@
 .testimonial-carousel .owl-item img {
     width: 150px;
     height: 150px;
+}
+.img {
+    overflow-clip-margin: content-box;
+    overflow: clip;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
 }
